replace cdn.jsdelivr.net with fastly.jsdelivr.net

--- a/dip/index.html
+++ b/dip/index.html
@@ -6,11 +6,11 @@
       rel="stylesheet"
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
+      href="https://fastly.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
       rel="stylesheet"
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css"
+      href="https://fastly.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css"
       rel="stylesheet"
     />
     <meta
@@ -122,8 +122,8 @@
         </v-card>
       </v-main>
     </v-app>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script src="https://fastly.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://fastly.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="./t.js"></script>
     <script>
       new Vue({
