--- a/webgl/dip-webgl.html
+++ b/webgl/dip-webgl.html
@@ -50,7 +50,7 @@
     </div>
 
     <script src="../assets/lib/sgl.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.2/dist/vue.global.js"></script>
+    <script src="https://fastly.jsdelivr.net/npm/vue@3.2.2/dist/vue.global.js"></script>
 
     <script>
       let vertexShaderSource = `#version 300 es
