--- a/webgl/index.html
+++ b/webgl/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet" />
+  <link href="https://fastly.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
+  <link href="https://fastly.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebGL</title>
 </head>
@@ -22,8 +22,8 @@
     <v-btn class="text-none" href="./transform.html">transform</v-btn>
     <v-btn class="text-none" href="./triangle.html">triangle</v-btn>
   </v-app>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
+  <script src="https://fastly.jsdelivr.net/npm/vue@2.x/dist/vue.min.js"></script>
+  <script src="https://fastly.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
   <script>
     new Vue({
       el: "#app",
