--- a/playlist-compare/index.html
+++ b/playlist-compare/index.html
@@ -8,7 +8,7 @@
   <title>歌单匹配</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet"
     type="text/css" />
-  <link href="https://fastly.jsdelivr.netnet/npm/quasar@2.5.5/dist/quasar.prod.css" rel="stylesheet" type="text/css" />
+  <link href="https://fastly.jsdelivr.net/npm/quasar@2.5.5/dist/quasar.prod.css" rel="stylesheet" type="text/css" />
   <style type="text/css">
     a {
       text-decoration: none;
@@ -140,10 +140,10 @@
     </q-layout>
   </div>
 
-  <script src="https://fastly.jsdelivr.netnet/npm/vue@3/dist/vue.global.prod.js" crossorigin="anonymous"></script>
-  <script src="https://fastly.jsdelivr.netnet/npm/quasar@2.5.5/dist/quasar.umd.prod.js" crossorigin="anonymous"></script>
-  <script src="https://fastly.jsdelivr.netnet/npm/@vueuse/shared@8.5.0/index.iife.min.js" crossorigin="anonymous"></script>
-  <script src="https://fastly.jsdelivr.netnet/npm/@vueuse/core@8.5.0/index.iife.min.js" crossorigin="anonymous"></script>
+  <script src="https://fastly.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js" crossorigin="anonymous"></script>
+  <script src="https://fastly.jsdelivr.net/npm/quasar@2.5.5/dist/quasar.umd.prod.js" crossorigin="anonymous"></script>
+  <script src="https://fastly.jsdelivr.net/npm/@vueuse/shared@8.5.0/index.iife.min.js" crossorigin="anonymous"></script>
+  <script src="https://fastly.jsdelivr.net/npm/@vueuse/core@8.5.0/index.iife.min.js" crossorigin="anonymous"></script>
   <script src="./api.js"></script>
   <script src="./app.js"></script>
 </body>
